--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         android:padding="5dp"
-        android:text="Hello what ius "
+        android:text="Question"
         android:id="@+id/question"
         android:layout_gravity="center"
         android:gravity="center"
