--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_height="match_parent"
-    android:layout_width="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:weightSum="3"
-    android:orientation="vertical"
-    android:background="@drawable/purple"
-    android:padding="16dp"
-    android:id="@+id/container">
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:padding="5dp"
-        android:text="Can you guess this ??"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="@color/colorWhite"
-        android:textSize="25sp"
-        android:fontFamily="casual"
-        android:background="@android:color/transparent"
-        />
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:padding="5dp"
-        android:text="Question"
-        android:id="@+id/question"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"
-        android:fontFamily="serif-monospace"
-        android:background="@android:color/transparent"
-        />
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:padding="5dp"
-        android:id="@+id/hint"
-        android:text="hint"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:fontFamily="serif-monospace"
-        android:textColor="@color/colorWhite"
-        android:textSize="20sp"
-        android:background="@android:color/transparent"
-        />
-    <androidx.appcompat.widget.AppCompatEditText
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+    <LinearLayout android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/colorWhite"
-        android:textColor="@color/colorWhite"
-        android:inputType="text"
-        android:id="@+id/answer"
-        />
-    <androidx.appcompat.widget.AppCompatButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_margin="16dp"
-        android:padding="5dp"
-        android:text="Submit"
-        android:fontFamily="monospace"
-        android:background="@drawable/round_shape"
-        android:elevation="7dp"
-        android:id="@+id/Submit"/>
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorWhite"
-        android:textSize="14sp"
-        android:text="Guesses Remaining: 2"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:padding="5sp"
-        android:layout_margin="16dp"
-        />
-</LinearLayout>
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:orientation="vertical"
+        android:background="@drawable/purple"
+        android:id="@+id/container">
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="5dp"
+            android:text="Can you guess this ??"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:textSize="25sp"
+            android:fontFamily="casual"
+            android:background="@android:color/transparent"
+            />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="5dp"
+            android:text="Question"
+            android:id="@+id/question"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:fontFamily="serif-monospace"
+            android:background="@android:color/transparent"
+            />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="5dp"
+            android:id="@+id/hint"
+            android:text="hint"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:fontFamily="serif-monospace"
+            android:textColor="@color/colorWhite"
+            android:textSize="20sp"
+            android:background="@android:color/transparent"
+            />
+        <androidx.appcompat.widget.AppCompatEditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/colorWhite"
+            android:textColor="@color/colorWhite"
+            android:layout_margin="16dp"
+            android:padding="5dp"
+            android:textSize="20sp"
+            android:inputType="text"
+            android:id="@+id/answer"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:padding="7dp"
+            android:text="Submit"
+            android:fontFamily="monospace"
+            android:textColor="#007700"
+            android:background="@drawable/round_shape"
+            android:id="@+id/Submit"
+            android:textStyle="bold"/>
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#ff0000"
+            android:background="@drawable/round_shape"
+            android:textSize="14sp"
+            android:text="Take Hint"
+            android:fontFamily="monospace"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:padding="7dp"
+            android:layout_margin="16dp"
+            android:onClick="onClickTakeHint"
+            android:id="@+id/hintButton"
+            />
+    </LinearLayout>
+</ScrollView>
