--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -11,17 +11,31 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_centerInParent="true">
-        <TextView
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/img_hollywood"
             android:layout_margin="10dp"
+            android:textSize="40sp"
+            android:text="Select one."
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:textColor="@color/colorWhite"
+            android:textStyle="bold"
+            android:fontFamily="casual"
+            />
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:layout_margin="10dp"
+            android:src="@drawable/img_hollywood"
+            android:scaleType="fitXY"
             android:onClick="onCickHollywood"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:layout_width="200dp"
+            android:layout_height="100dp"
             android:layout_margin="10dp"
-            android:background="@drawable/img_bollywood"
+            android:src="@drawable/img_bollywood"
+            android:scaleType="fitXY"
             android:onClick="onClickBollywood"/>
     </LinearLayout>
 </RelativeLayout>
